fix hamburger menu bug on smallest breakpoint

--- a/styles.css
+++ b/styles.css
@@ -663,7 +663,7 @@ hr,
 
   .nav-list{
     gap: 2rem;
-    margin-left: 18.5rem;
+    margin-left: 37rem;
     height: 55rem;
     width: 10rem;
     z-index: 100;
